--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="DuplicateDetector.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DuplicateDetector"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:conv="clr-namespace:DuplicateDetector.Converters"
+             StartupUri="Views/MainWindow.xaml">
+    
 </Application>
