--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:DuplicateDetector.ViewModels"
+        xmlns:conv="clr-namespace:DuplicateDetector.Converters"
         mc:Ignorable="d"
         Title="Duplicate Detector" Height="600" Width="900">
 
@@ -11,8 +12,13 @@
         <vm:MainViewModel/>
     </Window.DataContext>
 
+    <Window.Resources>
+        <conv:ByteSizeConverter x:Key="ByteSizeConverter"/>
+    </Window.Resources>
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
@@ -20,7 +26,6 @@
 
         <!-- Toolbar -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,10" VerticalAlignment="Center" HorizontalAlignment="Left">
-            <Button Content="Add Folder" Command="{Binding AddFolderCommand}" Width="100"/>
             <Button Content="Scan" Command="{Binding ScanCommand}" Width="100"/>
             <Button Content="Cancel" Command="{Binding CancelCommand}" Width="100"/>
             <Button Content="Delete Selected" Command="{Binding DeleteSelectedCommand}" Width="120"/>
@@ -28,8 +33,34 @@
             <ComboBox ItemsSource="{Binding CompareAlgorithms}" SelectedItem="{Binding SelectedAlgorithm, Mode=TwoWay}"/>
         </StackPanel>
 
+        <!-- Folder List -->
+        <GroupBox Header="Folders to Scan" Grid.Row="1" Margin="0,0,0,10">
+            <StackPanel>
+                <!-- List of currently added folders -->
+                <ItemsControl ItemsSource="{Binding Folders}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <DockPanel Margin="2">
+                                <!-- Folder name -->
+                                <TextBlock Text="{Binding}" VerticalAlignment="Center" Margin="0,0,10,0" />
+                                <!-- Remove button -->
+                                <Button Content="Remove"
+                                Width="70"
+                                CommandParameter="{Binding}"
+                                Click="RemoveFolder_Click"
+                                DockPanel.Dock="Right"/>
+                            </DockPanel>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+
+                <!-- Add folder button for convenience -->
+                <Button Content="Add Folder" Command="{Binding AddFolderCommand}" Width="120" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+            </StackPanel>
+        </GroupBox>
+
         <!-- Files List -->
-        <DataGrid Grid.Row="1" ItemsSource="{Binding FilesView}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" PreviewMouseLeftButtonDown="FilesDataGrid_PreviewMouseLeftButtonDown">
+        <DataGrid Grid.Row="2" ItemsSource="{Binding FilesView}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" PreviewMouseLeftButtonDown="FilesDataGrid_PreviewMouseLeftButtonDown">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Filename" Binding="{Binding Filename}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Size (Bytes)" Binding="{Binding Size}" IsReadOnly="True"/>
@@ -56,11 +87,11 @@
         </DataGrid>
 
         <!-- Progress and Stats -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,10,0,0">
+        <StackPanel Grid.Row="3" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,10,0,0">
             <ProgressBar Width="300" Height="20" Value="{Binding ProgressValue}" Maximum="100"/>
-            <TextBlock Text="{Binding TotalData, StringFormat=Total: {0:N0} bytes}" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding UniqueData, StringFormat=Unique: {0:N0} bytes}" VerticalAlignment="Center"/>
-            <TextBlock Text="{Binding DeleteData, StringFormat=To Delete: {0:N0} bytes}" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding TotalData, Converter={StaticResource ByteSizeConverter}, StringFormat=Total: {0}}" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding UniqueData, Converter={StaticResource ByteSizeConverter}, StringFormat=Unique: {0}}" VerticalAlignment="Center"/>
+            <TextBlock Text="{Binding DeleteData, Converter={StaticResource ByteSizeConverter}, StringFormat=To Delete: {0}}" VerticalAlignment="Center"/>
         </StackPanel>
     </Grid>
 </Window>
