--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -60,7 +60,7 @@
         </GroupBox>
 
         <!-- Files List -->
-        <DataGrid Grid.Row="2" ItemsSource="{Binding FilesView}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False" PreviewMouseLeftButtonDown="FilesDataGrid_PreviewMouseLeftButtonDown">
+        <DataGrid Grid.Row="2" ItemsSource="{Binding FilesView}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="False">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
@@ -85,20 +85,29 @@
                 <DataGridTemplateColumn Header="State" Width="120">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <ComboBox ItemsSource="{Binding FileStates}"
-                                      SelectedItem="{Binding State, Mode=TwoWay}"
-                                      IsReadOnly="True"
-                                      IsHitTestVisible="False"/>
+                            <Border Background="Transparent"
+                                    Cursor="Hand"
+                                    MouseLeftButtonDown="StateCell_MouseLeftButtonDown"
+                                    HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Stretch">
+                                <Border.Style>
+                                    <Style TargetType="Border">
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#110000FF"/>
+                                                <!-- faint blue highlight -->
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+                                <TextBlock Text="{Binding State}"
+                                           HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"
+                                           FontWeight="Bold"/>
+                            </Border>
+
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
-
-                    <DataGridTemplateColumn.CellEditingTemplate>
-                        <DataTemplate>
-                            <ComboBox ItemsSource="{Binding FileStates}"
-                                      SelectedItem="{Binding State, Mode=TwoWay}"
-                                      IsDropDownOpen="True"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellEditingTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
