--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -133,7 +133,7 @@
         <!-- Progress and Stats -->
         <StackPanel Grid.Row="3" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,10,0,0">
             <!-- Percentage text -->
-            <TextBlock Text="{Binding ProgressValue, StringFormat={}{0:0.##}%}" 
+            <TextBlock Text="{Binding ProgressValue, StringFormat={}{0:0.00}%}" 
                VerticalAlignment="Center" Width="50" TextAlignment="Right"/>
 
             <!-- Progress bar -->
