--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -21,6 +21,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="5"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -45,35 +46,44 @@
 
         <!-- Folder List -->
         <GroupBox Header="Folders to Scan" Grid.Row="1" Margin="0,0,0,10">
-            <StackPanel>
-                <!-- List of currently added folders -->
-                <ItemsControl ItemsSource="{Binding Folders}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <DockPanel Margin="2">
-                                <!-- Remove button -->
-                                <Button Content="Remove"
-                                        Width="70"
-                                        CommandParameter="{Binding}"
-                                        Click="RemoveFolder_Click"
-                                        DockPanel.Dock="Right"/>
-                                <!-- visibility checkbox -->
-                                <CheckBox Content="{Binding Path}"
-                                          IsChecked="{Binding IsVisible, Mode=TwoWay}"
-                                          Checked="FolderVisibilityChanged"
-                                          Unchecked="FolderVisibilityChanged"
-                                          Margin="5,0"/>
-                            </DockPanel>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-
-                
-            </StackPanel>
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <StackPanel>
+                    <!-- List of currently added folders -->
+                    <ItemsControl ItemsSource="{Binding Folders}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <DockPanel Margin="2">
+                                    <!-- visibility checkbox -->
+                                    <CheckBox Content="{Binding Path}"
+                                              IsChecked="{Binding IsVisible, Mode=TwoWay}"
+                                              Checked="FolderVisibilityChanged"
+                                              Unchecked="FolderVisibilityChanged"
+                                              Margin="5,0"/>
+                                    <!-- Remove button -->
+                                    <Button Content="Remove"
+                                            Width="70"
+                                            CommandParameter="{Binding}"
+                                            Click="RemoveFolder_Click"
+                                            DockPanel.Dock="Right"/>
+                                </DockPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
+            </ScrollViewer>
         </GroupBox>
 
+        <GridSplitter Grid.Row="2"
+              Height="6"
+              Background="#FFB0B0B0"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Center"
+              Cursor="SizeNS"
+              ResizeDirection="Rows"
+              ResizeBehavior="PreviousAndNext"/>
+        
         <!-- Files List -->
-        <DataGrid Grid.Row="2" ItemsSource="{Binding FilesView}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True">
+        <DataGrid Grid.Row="3" ItemsSource="{Binding FilesView}" AutoGenerateColumns="False" CanUserAddRows="False" IsReadOnly="True">
             <!-- Hide selection highlight colors -->
             <DataGrid.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent"/>
@@ -136,7 +146,7 @@
         </DataGrid>
 
         <!-- Progress and Stats -->
-        <StackPanel Grid.Row="3" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,10,0,0">
+        <StackPanel Grid.Row="4" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,10,0,0">
             <!-- Percentage text -->
             <TextBlock Text="{Binding ProgressValue, StringFormat={}{0:0.00}%}" 
                VerticalAlignment="Center" Width="50" TextAlignment="Right"/>
