--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -109,7 +109,7 @@
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
-                    <Button Content="Add Folder" Command="{Binding AddFolderCommand}" Width="120" Margin="0,5,0,0" HorizontalAlignment="Left"/>
+                    <Button Content="Add Folder" Command="{Binding AddFolderCommand}" Width="120" HorizontalAlignment="Left"/>
                 </StackPanel>
             </ScrollViewer>
         </GroupBox>
